Have 20 forks for ssh run

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,10 @@ inventory = lca2022-hosts
 remote_tmp = /tmp/$USER/.ansible/tmp
 transport = smart
 host_key_checking = false
+# SSH timeout
+timeout = 30
+# how many concurrent ssh_connection
+forks = 20
 gathering = smart
 remote_user = vagrant
 stdout_callback = unixy
