--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -52,7 +52,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	end
   end
   
-  config.vm.define "centos6" do |centos6|
+  config.vm.define "centos6", autostart: false do |centos6|
     centos6.vm.box = "bento/centos-6"
     centos6.vm.hostname = "centos6"
     centos6.vm.network "private_network", ip: "192.168.56.104"
