--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -25,7 +25,7 @@ pipelining = True
 scp_if_ssh = smart
 ssh_args = "-C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPersist=60s"
 control_path_dir = "~/.ansible"
-control_path = "ansible-ssh-%%h-%%p-%%r"
+control_path = "~/.ssh/ansible-ssh-%%h-%%p-%%r"
 usetty = True
 
 [persistent_connection]
