--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -9,11 +9,14 @@ host_key_checking = false
 timeout = 30
 # how many concurrent ssh_connection
 forks = 20
-gathering = smart
 remote_user = vagrant
 stdout_callback = unixy
 bin_ansible_callback = true
 no_target_syslog = true
+# facts
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp/facts.d/
 
 [privilege_escalation]
 become = true
