--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -27,7 +27,7 @@ become_ask_pass = false
 [ssh_connection]
 pipelining = True
 scp_if_ssh = smart
-ssh_args = "-C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPersist=60s"
+ssh_args = "-C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey"
 control_path_dir = "~/.ansible"
 control_path = "~/.ssh/ansible-ssh-%%h-%%p-%%r"
 usetty = True
