only target 'lamp' hostgroup

--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: "{{ hostgrp | default('all') }}"
-  gather_facts: true
+- hosts: "{{ hostgrp | default('lamp') }}"
   become: yes
   tasks:
     - name: Setup for CentOS
