--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -31,7 +31,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   
   config.vm.define "mgt", primary: true do |mgt|
     # name for VM
-    mgt.vm.hostname = "centos7-mgt"
+    mgt.vm.hostname = "mgt"
     mgt.vm.network "private_network", ip: "192.168.56.100"
     mgt.vm.box = "centos/7"
 	mgt.vm.boot_timeout = 180
