--- a/vagrant/my-mgt.yml
+++ b/vagrant/my-mgt.yml
@@ -20,12 +20,11 @@
         path: /etc/hosts
         insertafter: EOF
         block: |
-          192.168.56.100    centos7-mgt
+          192.168.56.100    centos7-mgt mgt
           192.168.56.105    centos7 centos7-web1
           192.168.56.106    ubuntu18 ubuntu-web1
           192.168.56.110    centos7-awx awx
           192.168.56.115    centos7-2 centos7-web2
-          192.168.56.116    centos7-3 centos7-web3       
     - name: Checkout lca2022-ansible.git
       git:
         repo: "https://github.com/serheang/lca2022-ansible"
