Rename inventory file to 'hosts'

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 strategy = free
 roles_path = roles
-inventory = lca2022-hosts
+inventory = hosts
 remote_tmp = /tmp/$USER/.ansible/tmp
 transport = smart
 host_key_checking = false
