--- a/ansible/roles/lamp/tasks/main.yml
+++ b/ansible/roles/lamp/tasks/main.yml
@@ -58,27 +58,14 @@
         state: latest
         update_cache: yes
 
-- name: Create customize index.html
-  blockinfile:
-    path: /var/www/html/index.html
-    marker: <!-- {mark} index.html -->
-    create: yes
-    block: |
-      <html>
-      <title>Test page for LCA2022</title>
-      <body>
-      <h1>LCA2022 - Test landing page</h1>
-      <h2>{{ ansible_hostname }}</h2>
-      <p>Welcome to LCA2022!<p>
-      This is running on {{ ansible_hostname }}, OS: {{ ansible_distribution }}, Version: {{ ansible_distribution_major_version }}
-      </body>
-      </html>
+- name: Copy templated index.html
+  template:
+    src: index.html.j2
+    dest: /var/www/html/index.html
+    mode: 0644
 
-- name: Create customize info.php
-  blockinfile:
-    path: /var/www/html/info.php
-    marker: <!-- {mark} info.php -->
-    create: yes
-    block: |
-      <?php phpinfo(); ?>
-  
+- name: Copy info.php
+  copy:
+    src: info.php
+    dest: /var/www/html/info.php
+    mode: 0644
