--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -48,11 +48,10 @@
             name: httpd
             enabled: yes
             state: started
-        - name: Enable and start mysql-server
+        - name: Enable mysql-server
           service:
             name: mysqld
             enabled: yes
-            state: started
         
     - name: Install LAMP - Ubuntu
       when:
@@ -73,7 +72,6 @@
           service:
             name: mysql
             enabled: yes
-            state: started
 
     - name: Create customize index.html
       blockinfile:
