--- a/ansible/roles/Ubuntu/tasks/main.yml
+++ b/ansible/roles/Ubuntu/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Install additional packages
   apt:
     name: "{{ install_pkgs }}"
-    state: latest
+    state: present
     update_cache: yes
     cache_valid_time: 3600
 - name: Remove unwanted packages
