Ensure roles_path is 'roles/'

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 #strategy = free
-roles_path = roles
+roles_path = roles/
 inventory = hosts
 remote_tmp = /tmp/$USER/.ansible/tmp
 transport = smart
