Commented out stdout_callback

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -10,7 +10,7 @@ timeout = 30
 # how many concurrent ssh_connection
 forks = 20
 remote_user = vagrant
-stdout_callback = unixy
+#stdout_callback = unixy
 bin_ansible_callback = true
 no_target_syslog = true
 # facts
