--- a/ansible/my-setup.yml
+++ b/ansible/my-setup.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: webservers
+- name: Install Apache webserver
+  hosts: webservers
   become: yes
   tasks:
     - name: Install Apache - CentOS
