Replaced 'package' with 'apt' for ubuntu

--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Install Apache for Ubuntu
   when:
     - ansible_distribution == "Ubuntu"
-  package:
+  apt:
     name: apache2
     state: present
     update_cache: yes
